--- a/index.html
+++ b/index.html
@@ -23,7 +23,15 @@ h1 { text-align:center; color:#FF8C42; margin-bottom:20px; font-size:28px; }
 label { font-size:14px; color:#4b2a3a; margin:5px 0; display:block; }
 .unit-addon { margin-bottom:5px; }
 </style>
-  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6HCLXD54GH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config','G-6HCLXD54GH');
+</script>
    
 </head>
 <body>
@@ -324,4 +332,5 @@ document.getElementById("sendBtn").addEventListener("click", function () {
 </body>
 
 </html>
+
 
